# harmony

./: Cargo.toml  README.md  renovate.json
.github/workflows/: rust.yml
crates/harmony/: Cargo.toml
crates/harmony/src/: authentication.rs  errors.rs  main.rs
crates/harmony/src/methods/: channels.rs  invites.rs  messages.rs  mod.rs  roles.rs  spaces.rs  webrtc.rs
crates/harmony/src/services/: encryption.rs  environment.rs  mod.rs  redis.rs  webrtc.rs
crates/harmony/src/services/database/: calls.rs  channels.rs  emojis.rs  infractions.rs  invites.rs  members.rs  messages.rs  roles.rs  scopes.rs  users.rs
crates/pulse/: Cargo.toml  README.md
crates/pulse-api/: Cargo.toml
crates/pulse-api/src/: lib.rs
crates/pulse/src/: environment.rs  errors.rs  main.rs  redis.rs
crates/pulse/src/rtc/: call.rs  mod.rs  peer.rs  udp.rs
crates/pulse/src/socket/: client.rs  events.rs  mod.rs  server.rs
crates/rapid/: Cargo.toml  README.md
crates/rapid/src/: errors.rs  lib.rs  socket.rs  utilities.rs
src/: errors.rs  globals.rs  main.rs
src/methods/: authentication.rs  channels.rs  invites.rs  messages.rs  mod.rs  roles.rs  spaces.rs  webrtc.rs
src/methods/rpc/: mod.rs
src/methods/voice/: authentication.rs  webrtc.rs
src/services/: encryption.rs  environment.rs  mod.rs  permissions.rs  redis.rs  socket.rs  webrtc.rs
src/services/database/: calls.rs  channels.rs  events.rs  infractions.rs  invites.rs  members.rs  messages.rs  mod.rs  roles.rs  scopes.rs  spaces.rs  users.rs
