[package]
name = "easylink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
async-trait = "0.1.68"
futures-util = "0.3.28"

dashmap = "5.4.0"
lazy_static = "1.4.0"
once_cell = "1.17.1"

chrono = "0.4.24"
rand = "0.8.5"
num_cpus = "1.15.0"
ulid = "1.0.0"

env_logger = "0.10.0"
log = "0.4.17"

async-tungstenite = "0.21.0"

mongodb = "2.4.0"
jsonwebtoken = "8.3.0"

serde = { version = "1.0.160", features = ["derive"] }
rmp-serde = "1.1.1"

aes-gcm = "0.10.1"
flate2 = "1.0.25"
x25519-dalek = "2.0.0-rc.2"
