[package]
name = "harmony"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
async-trait = "0.1.79"
futures-util = "0.3.28"

dashmap = "5.5.3"
lazy_static = "1.4.0"
once_cell = "1.19.0"

chrono = "0.4.37"
rand = "0.8.5"
num_cpus = "1.16.0"
ulid = "1.1.2"

env_logger = "0.11.3"
log = "0.4.21"

async-tungstenite = "0.25.0"

mongodb = "2.8.2"
jsonwebtoken = "8.3.0"
redis = { version = "0.25.2", features = ["async-std-comp"] }

serde = { version = "1.0.183", features = ["derive"] }
rmp-serde = "1.1.2"

aes-gcm = "0.10.2"
flate2 = "1.0.28"
x25519-dalek = "2.0.1"
