[package]
name = "harmony"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
async-trait = "0.1.73"
futures-util = "0.3.28"

dashmap = "6.0.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"

chrono = "0.4.26"
rand = "0.8.5"
num_cpus = "1.16.0"
ulid = "1.0.0"

dotenvy = "0.15.7"
env_logger = "0.11.0"
log = "0.4.20"

async-tungstenite = "0.27.0"

mongodb = "3.0.0"
jsonwebtoken = "9.0.0"
redis = { version = "0.26.0", features = ["async-std-comp"] }

serde = { version = "1.0.183", features = ["derive"] }
rmp-serde = "1.1.2"

aes-gcm = "0.10.2"
flate2 = "1.0.27"
x25519-dalek = "2.0.0"
