[package]
name = "rapid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
async-trait = "0.1.73"
futures-util = "0.3.28"

dashmap = "6.0.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"

chrono = "0.4.26"
rand = "0.8.5"
ulid = "1.0.0"

env_logger = "0.11.0"
log = "0.4.20"

async-tungstenite = "0.28.0"

serde = { version = "1.0.183", features = ["derive"] }
rmp-serde = "1.1.2"
typetag = "0.2.18"
rmpv = { version = "1.3.0", features = ["with-serde"] }
x25519-dalek = "2.0.0"
